# otus_homework

./: CMakeLists.txt  Doxyfile  test_version.cpp
.github/workflows/: documentation.yml  release.yml
allocator/: CMakeLists.txt
allocator/include/: allocator.h  list.h
allocator/src/: main.cxx
bulk/: CMakeLists.txt
bulk/include/: bulk.h
bulk/src/: bulk.cxx  main.cxx
bulk/test/: test.txt
cmake/: cmake_functions.cmake
common/: CMakeLists.txt
common/tests/: CMakeLists.txt
doc/: Doxyfile
ip_filter/: CMakeLists.txt
ip_filter/include/: ip.h
ip_filter/src/: ip.cpp  ip_filter.cxx
ip_filter/tests/: CMakeLists.txt  test_ip.cpp
ip_printer/: CMakeLists.txt
ip_printer/include/: ip.h
ip_printer/src/: main.cxx
matrix/: CMakeLists.txt
matrix/include/: matrix.h
matrix/src/: main.cxx
vector_editor/: CMakeLists.txt
vector_editor/include/: color.h  document.h  file.h  shape.h
vector_editor/src/: main.cxx
